// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table components Should properly render a table with darkMode 1`] = `
<DocumentFragment>
  .emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 1rem auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border: 1px solid white;
  min-width: 400px;
}

.emotion-16 div:last-of-type {
  border-bottom: none;
}

.emotion-4 {
  font-weight: bold;
  font-size: 1.15rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
  width: 100%;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-bottom: 1px solid white;
}

.emotion-4 div:last-of-type {
  border-right: none;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-right: 1px solid white;
  padding: 0.5rem;
  text-align: center;
}

.emotion-9 {
  font-weight: normal;
  font-size: initial;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
  width: 100%;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-bottom: 1px solid white;
}

.emotion-9 div:last-of-type {
  border-right: none;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 1rem auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border: 1px solid white;
  min-width: 400px;
}

.emotion-16 div:last-of-type {
  border-bottom: none;
}

.emotion-4 {
  font-weight: bold;
  font-size: 1.15rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
  width: 100%;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-bottom: 1px solid white;
}

.emotion-4 div:last-of-type {
  border-right: none;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-right: 1px solid white;
  padding: 0.5rem;
  text-align: center;
}

.emotion-9 {
  font-weight: normal;
  font-size: initial;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
  width: 100%;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-bottom: 1px solid white;
}

.emotion-9 div:last-of-type {
  border-right: none;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

<div
    class="emotion-16"
  >
    <div
      class="emotion-4"
    >
      <div
        class="emotion-0"
      >
         Hi there 
      </div>
      <div
        class="emotion-0"
      >
         Hi there 
      </div>
      <div
        class="emotion-0"
      >
         Hi there 
      </div>
      <div
        class="emotion-0"
      >
         Hi there 
      </div>
    </div>
    <div
      class="emotion-9"
    >
      <div
        class="emotion-0"
      >
        Yo dawg
      </div>
      <div
        class="emotion-0"
      >
        Yo dawg
      </div>
      <div
        class="emotion-0"
      >
        Yo dawg
      </div>
      <div
        class="emotion-0"
      >
        Yo dawg
      </div>
    </div>
    <div
      class="emotion-9"
    >
      <div
        class="emotion-0"
      >
        <div
          class="emotion-10"
        >
          Table Cell for centering
        </div>
      </div>
      <div
        class="emotion-0"
      >
        Testing 123
      </div>
      <div
        class="emotion-0"
      >
        Testing 123
      </div>
      <div
        class="emotion-0"
      >
        Testing 123
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Table components Should properly render a table with lightMode 1`] = `
<DocumentFragment>
  .emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 1rem auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border: 1px solid black;
  min-width: 400px;
}

.emotion-16 div:last-of-type {
  border-bottom: none;
}

.emotion-4 {
  font-weight: bold;
  font-size: 1.15rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
  width: 100%;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-bottom: 1px solid black;
}

.emotion-4 div:last-of-type {
  border-right: none;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-right: 1px solid black;
  padding: 0.5rem;
  text-align: center;
}

.emotion-9 {
  font-weight: normal;
  font-size: initial;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
  width: 100%;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-bottom: 1px solid black;
}

.emotion-9 div:last-of-type {
  border-right: none;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 1rem auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border: 1px solid black;
  min-width: 400px;
}

.emotion-16 div:last-of-type {
  border-bottom: none;
}

.emotion-4 {
  font-weight: bold;
  font-size: 1.15rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
  width: 100%;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-bottom: 1px solid black;
}

.emotion-4 div:last-of-type {
  border-right: none;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-right: 1px solid black;
  padding: 0.5rem;
  text-align: center;
}

.emotion-9 {
  font-weight: normal;
  font-size: initial;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
  width: 100%;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-bottom: 1px solid black;
}

.emotion-9 div:last-of-type {
  border-right: none;
}

<div
    class="emotion-16"
  >
    <div
      class="emotion-4"
    >
      <div
        class="emotion-0"
      >
         Hi there 
      </div>
      <div
        class="emotion-0"
      >
         Hi there 
      </div>
      <div
        class="emotion-0"
      >
         Hi there 
      </div>
      <div
        class="emotion-0"
      >
         Hi there 
      </div>
    </div>
    <div
      class="emotion-9"
    >
      <div
        class="emotion-0"
      >
        Yo dawg
      </div>
      <div
        class="emotion-0"
      >
        Yo dawg
      </div>
      <div
        class="emotion-0"
      >
        Yo dawg
      </div>
      <div
        class="emotion-0"
      >
        Yo dawg
      </div>
    </div>
    <div
      class="emotion-9"
    >
      <div
        class="emotion-0"
      >
        <div
          class="emotion-10"
        >
          Table Cell for centering
        </div>
      </div>
      <div
        class="emotion-0"
      >
        Testing 123
      </div>
      <div
        class="emotion-0"
      >
        Testing 123
      </div>
      <div
        class="emotion-0"
      >
        Testing 123
      </div>
    </div>
  </div>
</DocumentFragment>
`;
